# straz

./: .gitignore  Dockerfile  LICENSE  README.md  all_project_files_for_chatgpt.md  api.py  blockchain.py  consensus.json  consensus.py  contracts.json  docker-compose.yml  genesis.py  mine.sh  modify_bitcoin.sh  p2p.py  pqc.py  quantum_crypto.py  quantum_crypto_for_chatgpt.txt  requirements.txt  setup.py  setup.sh  smart_contract.py  straz_blockchain.json
.github/workflows/: ci.yml
src/: __init__.py  api.js  api.py  blockchain.py  main.py  mine_block.py  node.py  p2p.py  wallet.py  zk_quantum.py
straz-rs/: Cargo.toml  README.md
straz-rs/.github/workflows/: ci.yml
straz-rs/benches/: blockchain_bench.rs  consensus_bench.rs  vm_bench.rs
straz-rs/src/: lib.rs
straz-rs/src/blockchain/: block.rs  mod.rs  state.rs  tests.rs  transaction.rs  transaction_error.rs  types.rs
straz-rs/src/blockchain/tests/: apply_block_tests.rs  vm_execution_tests.rs
straz-rs/src/consensus/: engine.rs  mod.rs  rewards.rs  rewards_tests.rs  tests.rs  types.rs  vrf.rs  vrf_tests.rs
straz-rs/src/consensus/tests/: consensus_engine_tests.rs
straz-rs/src/contract/: mod.rs  tests.rs  vm.rs
straz-rs/src/crypto/: mod.rs  pqc.rs  quantum.rs  tests.rs  zk.rs
straz-rs/src/network/: mod.rs  tests.rs
straz-rs/src/vm/: compiler.rs  disassembler.rs  execution.rs  mod.rs  parser.rs
straz-rs/src/vm/tests/: parser_compiler_tests.rs
straz-rs/tests/: e2e_node_test.rs
tests/: __init__.py  test_blockchain.py
wallets/: 13xtqyaSQGD1TJHoYgcaT2ZQFHdGqCGF58.json  144Y4UGMU8R61xFZnfDX6YH3AXLNhB9BNm.json  15CAQYMYsmnnL2giK5F9pZ2ycqcY5kQNGq.json  18nXnrPE9Worf5qdzVDijvmzgUGXUHABed.json  1Bb9Bqgw9L1F4M61dDyNuwU3Jqgd8RRM4x.json  1CkoNV1NVGFAYWvxig9JPoKC9UqJtFzPaS.json  1K1XmPJVgnth11unZXvoMsL1aMkqJMgh1P.json  1Nxn8CvvVfWYV3PBge8NdW9m5wpovDVpko.json
