[package]
name = "straz"
version = "0.1.0"
edition = "2021"
authors = ["William Ruzycki"]
description = "A post-quantum and quantum-resistant blockchain with ZK-rollup support"

[dependencies]
# Core dependencies
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Crypto dependencies
ring = "0.17"
sha3 = "0.10"
rand = "0.8"
aes-gcm = "0.10"
ed25519-dalek = "2.1"
x25519-dalek = "2.0"

# Blockchain specific
merkletree = "0.3"
blake3 = "1.5"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "crypto_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort" 